Comments about encapsulation and setting a listener on a binder.